crates/solidity/testing/snapshots/bindings_output/user_types/top_level/v2/generated/0.4.16-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
   ╭─[input.sol:8:1]
   │
 8 │ type TopLevel is uint256;
   │ ─────────────┬────────────  
   │              ╰────────────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (3):
- Def: #1 ["Test" @ input.sol:1:10] (contract)
- Def: #2 ["test" @ input.sol:2:14] (function, type: function () returns uint256)
- Def: #3 ["tl" @ input.sol:3:18] (variable, type: unresolved)

------------------------------------------------------------------------

References (6):
- Ref: ["TopLevel" @ input.sol:3:9] -> unresolved
- Ref: ["TopLevel" @ input.sol:3:23] -> unresolved
- Ref: ["wrap" @ input.sol:3:32] -> unresolved
- Ref: ["TopLevel" @ input.sol:4:16] -> unresolved
- Ref: ["unwrap" @ input.sol:4:25] -> unresolved
- Ref: ["tl" @ input.sol:4:32] -> #3

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function test() public pure returns (uint) {
   │              ──┬─  
   │                ╰─── name: 2
 3 │         TopLevel tl = TopLevel.wrap(20);
   │         ────┬─── ─┬   ────┬─── ──┬─  
   │             ╰──────────────────────── unresolved
   │                   │       │      │   
   │                   ╰────────────────── name: 3
   │                           │      │   
   │                           ╰────────── unresolved
   │                                  │   
   │                                  ╰─── unresolved
 4 │         return TopLevel.unwrap(tl);
   │                ────┬─── ───┬── ─┬  
   │                    ╰─────────────── unresolved
   │                            │    │  
   │                            ╰─────── unresolved
   │                                 │  
   │                                 ╰── ref: 3
───╯
